fixed pinned route
